--- a/css/csssass/scss/styles.scss
+++ b/css/csssass/scss/styles.scss
@@ -577,7 +577,7 @@ h3 {
 }
 
 
-//--------------- Extra large devices (large desktop, 1200px and up...!) ----------------- //
+/*/--------------- Extra large devices (large desktop, 1200px and up...!) ----------------- /*/
 
 @include media-breakpoint-only (xl) {
 // Globales en table media moviles //
