--- a/backend/css/csssass/css/styles.css
+++ b/backend/css/csssass/css/styles.css
@@ -10632,7 +10632,7 @@ readers do not read off random characters that represent icons */
 .inicio .container-fluid .row .MenuLogo {
   background-color: var(--dark);
   padding: 0;
-  height: 300vh; }
+  height: 2012px; }
   .inicio .container-fluid .row .MenuLogo img {
     margin: 20px 0 20px 0;
     max-width: 234px;
@@ -10753,7 +10753,7 @@ readers do not read off random characters that represent icons */
   float: right;
   margin-top: 50px;
   text-transform: capitalize;
-  color: var(--white); }
+  cursor: pointer; }
 .inicio .container-fluid .row .editSlide {
   margin-top: 140px;
   border-top: 1px solid #e9ecef;
@@ -10769,9 +10769,13 @@ readers do not read off random characters that represent icons */
   .inicio .container-fluid .row .editSlide .col-lg-4 .containerTitleImage {
     border: 2px dashed #adb5bd;
     padding: 10px;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    text-align: right; }
     .inicio .container-fluid .row .editSlide .col-lg-4 .containerTitleImage form {
       margin-top: 20px; }
+      .inicio .container-fluid .row .editSlide .col-lg-4 .containerTitleImage form .buttonSaveSlide {
+        float: none;
+        margin-top: 0; }
   .inicio .container-fluid .row .editSlide .col-lg-4 a {
     position: absolute;
     right: 25px;
@@ -10793,10 +10797,96 @@ readers do not read off random characters that represent icons */
   font-size: 18px;
   padding: 10px 18px; }
 .inicio .container-fluid .row .col-lg-10 .borderTextArticles {
-  margin: 20px 4px; }
-  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .col-lg-12 {
+  margin: 30px 4px; }
+  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle {
     padding: 20px;
     border: 1px solid #adb5bd; }
+    .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form {
+      text-align: center; }
+      .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form .form-row .form-group {
+        margin: 0 auto; }
+        .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form .form-row .form-group input {
+          border: 1px solid #adb5bd;
+          border-radius: 5px;
+          padding: 6px 10px;
+          font-size: 15px;
+          cursor: pointer; }
+          .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form .form-row .form-group input:hover {
+            -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+            background-color: #adb5bd; }
+      .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form p {
+        text-align: center;
+        margin-top: 20px; }
+      .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form .borderSelectImgArticle {
+        border: 2px dashed #adb5bd;
+        padding: 20px; }
+        .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form .borderSelectImgArticle img {
+          max-width: 220px; }
+      .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form .buttonSaveArticle {
+        float: none;
+        margin: 0; }
+  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .orderArticleEdit {
+    border-top: 1px solid #e9ecef;
+    margin: 20px 0; }
+    .inicio .container-fluid .row .col-lg-10 .borderTextArticles .orderArticleEdit div {
+      margin-top: 50px;
+      background-color: #e9ecef;
+      height: 40px;
+      text-align: right;
+      padding: 5px; }
+      .inicio .container-fluid .row .col-lg-10 .borderTextArticles .orderArticleEdit div .pen {
+        position: absolute;
+        right: 60px;
+        background-color: var(--blue);
+        width: 40px;
+        height: 30px;
+        text-align: center;
+        border-radius: 4px;
+        color: var(--white);
+        line-height: 1.7rem;
+        margin-right: 12px; }
+      .inicio .container-fluid .row .col-lg-10 .borderTextArticles .orderArticleEdit div .times {
+        position: absolute;
+        right: 20px;
+        background-color: var(--red);
+        width: 40px;
+        height: 30px;
+        text-align: center;
+        border-radius: 4px;
+        color: var(--white);
+        line-height: 1.9rem; }
+      .inicio .container-fluid .row .col-lg-10 .borderTextArticles .orderArticleEdit div .saveOrderArticle {
+        margin: 0;
+        position: relative;
+        bottom: 3px;
+        left: 5px; }
+  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .col-lg-3 a i {
+    position: absolute;
+    right: 38px;
+    background-color: var(--red);
+    width: 40px;
+    height: 30px;
+    text-align: center;
+    border-radius: 4px;
+    color: var(--white);
+    line-height: 1.9rem; }
+  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .col-lg-3 div {
+    border: 2px dashed #adb5bd;
+    padding: 40px 19px 20px; }
+  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .col-lg-9 {
+    padding: 0; }
+    .inicio .container-fluid .row .col-lg-10 .borderTextArticles .col-lg-9 h1 {
+      font-weight: 400; }
+    .inicio .container-fluid .row .col-lg-10 .borderTextArticles .col-lg-9 .buttonSecondary {
+      float: none;
+      margin: 0;
+      color: none; }
+  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .col-lg-12 .form-group {
+    margin-top: 10px; }
 
 /*===========  End of Articulos  ==============*/
 /*=============================================
@@ -10828,7 +10918,20 @@ readers do not read off random characters that represent icons */
     padding-top: 30px;
     max-height: 115px;
     max-width: 115px;
-    margin-left: 30px; } }
+    margin-left: 30px; }
+  .inicio .container-fluid .row .col-lg-10 .borderTextArticles .editArticle form .borderSelectImgArticle img {
+    max-width: 195px; }
+
+  .slideCaption {
+    visibility: hidden !important; }
+
+  div .arrows {
+    font-size: 20px !important;
+    position: absolute;
+    top: 23% !important; }
+
+  ol li .fa-circle {
+    visibility: hidden !important; } }
 /*/------------ Small Device (Phones 576 px and up...!)-------------- /*/
 @media (min-width: 576px) and (max-width: 767.98px) {
   nav img {
