--- a/backend/css/csssass/scss/styles.scss
+++ b/backend/css/csssass/scss/styles.scss
@@ -209,7 +209,7 @@ $redStrong: #ff3636;
 			.MenuLogo {
 				background-color: var(--dark);
 				padding: 0;
-				height: 300vh;
+				height: 2012px;
 				img {
 				    margin: 20px 0 20px 0;
 				    max-width: 234px;
@@ -383,7 +383,7 @@ $redStrong: #ff3636;
 			    float: right;
 			    margin-top: 50px;
 			    text-transform: capitalize;
-			    color: var(--white);
+			    cursor: pointer;
 			}
 			.editSlide {
 				margin-top: 140px;
@@ -404,8 +404,13 @@ $redStrong: #ff3636;
 						border: 2px dashed #adb5bd;
 						padding: 10px;
 						margin-bottom: 20px;
+						text-align: right;
 						form {
 							margin-top: 20px;
+							.buttonSaveSlide {
+								float: none;
+								margin-top: 0;
+							}
 						}
 					}
 					a {
@@ -446,10 +451,124 @@ $redStrong: #ff3636;
 					padding: 10px 18px;
 				}
 				.borderTextArticles {
-					margin: 20px 4px;
-					.col-lg-12 {
+					margin: 30px 4px;
+					.editArticle {
 						padding: 20px;
 						border: 1px solid gray('500');
+						form {
+							text-align: center;
+							.form-row {
+								.form-group {
+									margin: 0 auto;
+									input {
+									    border: 1px solid gray('500');
+									    border-radius: 5px;
+									    padding: 6px 10px;
+									    font-size: 15px;
+									    cursor: pointer;
+									    &:hover {
+											-webkit-transition: all 0.3s ease;
+											-moz-transition: all 0.3s ease;
+											-ms-transition: all 0.3s ease;
+											-o-transition: all 0.3s ease;
+											transition: all 0.3s ease;
+									    	background-color: gray('500');
+									    }
+									}
+								}
+							}
+							p {
+								text-align: center;
+								margin-top: 20px;
+							}
+							.borderSelectImgArticle {
+								border: 2px dashed gray('500');
+								padding: 20px;
+								img {
+									max-width: 220px;
+								}
+							}
+							.buttonSaveArticle {
+								float: none;
+								margin: 0;
+							}
+						}
+					}
+					.orderArticleEdit {
+						border-top: 1px solid gray('200');
+						margin: 20px 0;
+						div {
+						    margin-top: 50px;
+						    background-color: gray('200');
+						    height: 40px;
+						    text-align: right;
+						    padding: 5px;
+						    .pen {
+							    position: absolute;
+							    right: 60px;
+							    background-color: var(--blue);
+							    width: 40px;
+							    height: 30px;
+							    text-align: center;
+							    border-radius: 4px;
+							    color: var(--white);
+							    line-height: 1.7rem;
+							    margin-right: 12px;
+						    }
+						    .times {
+							    position: absolute;
+							    right: 20px;
+							    background-color: var(--red);
+							    width: 40px;
+							    height: 30px;
+							    text-align: center;
+							    border-radius: 4px;
+							    color: var(--white);
+							    line-height: 1.9rem;
+						    }
+						    .saveOrderArticle {
+						    	margin: 0;
+							    position: relative;
+							    bottom: 3px;
+							    left: 5px;
+						    }
+
+						}
+					}
+					.col-lg-3 {
+						a {
+							i {
+								position: absolute;
+							    right: 38px;
+							    background-color: var(--red);
+							    width: 40px;
+							    height: 30px;
+							    text-align: center;
+							    border-radius: 4px;
+							    color: var(--white);
+							    line-height: 1.9rem;
+							}
+						}
+						div {
+						    border: 2px dashed gray('500');
+						    padding: 40px 19px 20px;
+						}
+					}
+					.col-lg-9 {
+						padding: 0;
+						h1 {
+							font-weight: 400;
+						}
+						.buttonSecondary {
+							float: none;
+							margin: 0;
+							color: none;
+						}
+					}
+					.col-lg-12 {
+						.form-group {
+							margin-top: 10px;
+						}
 					}
 				}
 			}
@@ -538,6 +657,40 @@ nav {
 					}
 				}
 			}
+			.col-lg-10 {
+				.borderTextArticles {
+					.editArticle {
+						form {
+							.borderSelectImgArticle {
+								img {
+									max-width: 195px;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+.slideCaption {
+@include invisible(hidden);
+}
+
+ div {
+	.arrows {
+	  font-size: 20px !important;
+	  position: absolute;
+	  top: 23% !important;
+	}
+}
+
+ol {
+	li {
+		.fa-circle {
+			@include invisible(hidden);
+
 		}
 	}
 }
